<resources>
    <string name="app_name">Game In Mobile</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Game In Mobile</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_profile">Profile</string>
    <string name="rewards">Rewards</string>
    <string name="achievements">Achievements</string>
    <string name="quests">Quests</string>
    <string name="raitings">Raitings</string>
    <string name="about_us">About us</string>
    <string name="settings">Settings</string>
    <string name="info">Info</string>
    <string name="log_out">Log out</string>
    <string name="gamein">GameIn</string>
    <string name="login">Login:</string>
    <string name="password">Password:</string>
    <string name="log_in">Log In</string>
    <string name="language">Language:</string>
    <string name="confirm">Confirm</string>
    <string name="achv_req">Requirement: </string>
    <string name="achv_goal">Goal:\n</string>
    <string name="achv_step">Step:\n</string>
    <string name="achv_reward">Reward:\n</string>
    <string name="achv_exp">EXP:\n</string>
    <string name="achv_bonuses">Bonuses:\n</string>
    <string name="achv_title">Title: </string>
    <string name="raiting_place_req">Requirement: </string>
    <string name="raiting_place_step">Step: </string>
    <string name="raiting_place_reward">Rewards:\n</string>
    <string name="raiting_place_win">Winners: </string>
    <string name="place_email">Email: </string>
    <string name="place_val">Value: </string>
    <string name="user_titeles">Titeles:</string>
    <string name="quest_req">Requirement: </string>
    <string name="quest_goal">Goal:\n</string>
    <string name="quest_step">Step:\n</string>
    <string name="quest_reward">Reward:\n</string>
    <string name="quest_exp">EXP:\n</string>
    <string name="quest_bonuses">Bonuses:\n</string>
    <string name="quest_dont_compl">Quest don`t complete!</string>
    <string name="quest_update">Update remaining: </string>
    <string name="quest_hours"> hours</string>
    <string name="raiting_req">Requirement: </string>
    <string name="raiting_step">Step: </string>
    <string name="raiting_reward">Rewards:\n</string>
    <string name="raiting_win">Winners: </string>
    <string name="view_places">View places</string>
    <string name="buy">Buy</string>
    <string name="buy_success">Buying success!</string>
    <string name="buy_erorr">Please, try later</string>
    <string name="qr_code">QR-Code</string>
</resources>