<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_baseline_account_circle_24"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_rewards"
            android:icon="@drawable/reward"
            android:title="@string/rewards" />
        <item
            android:id="@+id/nav_achvs"
            android:icon="@drawable/achv"
            android:title="@string/achievements" />
        <item
            android:id="@+id/nav_quests"
            android:icon="@drawable/quest"
            android:title="@string/quests" />
        <item
            android:id="@+id/nav_raitings"
            android:icon="@drawable/raiting"
            android:title="@string/raitings" />
        <item
            android:id="@+id/nav_qr"
            android:icon="@drawable/ic_baseline_qr_code_24"
            android:title="@string/qr_code" />
    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/g2">
        <item
            android:id="@+id/about"
            android:icon="@drawable/ic_baseline_auto_stories_24"
            android:title="@string/about_us" />
        <item
            android:id="@+id/info"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/info" />
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/settings" />
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/log_out"
            android:icon="@drawable/ic_baseline_logout_24"
            android:title="@string/log_out" />
    </group>
</menu>